--- a/examples/package.json
+++ b/examples/package.json
@@ -1,10 +1,16 @@
 {
+  "private": true,
   "name": "examples",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
-    "vite": "^2.3.3",
-    "vite-plugin-html": "^2.0.7"
+    "@scala-js/vite-plugin-scalajs": "^1.0.0",
+    "vite": "^4.1.0"
   }
 }
